# feminterface

./: .gitignore  log.txt  main.py  pyproject.toml
feminterface/: .gitignore  README.md  compare.py  support.py
feminterface/fem/: cards_import.py  element_parameters.py  fem.py  fem_base.py  fem_modification.py  read.py  shell.py  write.py
feminterface/fem/cards/: belfix.py  bello2.py  beuslo.py  bgrav.py  bldep.py  bnbcd.py  date.py  gbarm.py  gbeamg.py  gbox.py  gchan.py  gchanr.py  gcoord.py  geccen.py  gelmnt1.py  gelref1.py  gelth.py  giorh.py  giorhr.py  glsec.py  gnode.py  gpipe.py  gsetmemb.py  gunivec.py  hierarch.py  hsupstat.py  hsuptran.py  ident.py  iend.py  misosel.py  sconcept.py  sconmesh.py  sconplis.py  sporocode.py  sprosele.py  tdload.py  tdmater.py  tdnode.py  tdsconc.py  tdsect.py  (+3 more)
feminterface/func/: boundary_func.py  element_func.py  func_geo.py  func_template.py  load_func.py  node_func.py  set_func.py
feminterface/input/: input.yaml  support.py
tests/: test_func_translate_nodes.py  test_gcoord.py  test_gelmnt1.py  test_shell.py
